# apfs-tools

./: .gitignore  CMakeLists.txt  Makefile  blog.md  recover.py
src/: apfs-explore-fs-tree.c  apfs-explore-omap-tree.c  apfs-inspect.c  apfs-list.c  apfs-read.c  apfs-recover.c  apfs-search-tailored.c  apfs-search.c
src/apfs/: io.h
src/apfs/func/: btree.h  cksum.h
src/apfs/string/: btree.h  fs.h  j.h  nx.h  omap.h
src/apfs/struct/: const.h  crypto.h  dstream.h  j.h  nx.h  sibling.h  snap.h
supplemental-tools/: remove-trailing-nulls.sh  rtn
